# prime-rl-playground

./: .gitignore  .gitmodules  Dockerfile  README.md  generate_fake_rollout.py  install.sh  miso_setup.sh  pyproject.toml  train.py  train_ddp.py  train_ddp_manual.py  train_fsdp.py
.github/workflows/: cpu_tests.yaml  docker-build-push.yml  gpu.yml  gpu_tests.yaml  ruff.yml  style.yaml  tests.yaml
configs/: 150m.toml  debug.toml  rl_Qwen1.5B.toml  rl_debug.toml  test.toml
configs/10B/: H100.toml  H100_cooldown.toml  H100_simple.toml
configs/13B/: H100.toml
configs/150M/: 3090.toml  A40.toml  H100.toml
configs/150M_short/: 3090.toml  A40.toml  H100.toml
configs/1B/: H100.toml  H100_llama2_edu.toml  H100_llama2_edu_no_feat.toml  H100_llama3.toml
configs/1B_diloco/: H100.toml
configs/70M/: H100.toml
configs/7B/: H100.toml
configs/7B_diloco/: H100.toml
configs/debug/: debug.toml  diloco.toml  normal.toml
configs/inference/: debug.toml  intellect2_qwen_distill.toml  intellect2_qwq.toml  simple_math.toml  simple_reverse_two_gpus.toml
configs/inference/Qwen1.5B/: Qwen1.5B.toml  debug_math.toml  multistep.toml  qwen1.5B.toml
configs/inference/Qwen32B/: qwen32B.toml  qwen_32b_r1_distill.toml  qwq.toml
configs/training/: Qwen7B.toml  debug.toml  qwen32B.toml  qwen_32b_r1_distill.toml  qwq.toml  simple_math.toml  simple_reverse_two_gpu.toml
configs/training/150M/: H100-fast.toml
configs/training/150M_short/: 3090.toml
configs/training/1B/: H100.toml
configs/training/Qwen1.5B/: Qwen1.5b.toml  debug_math.toml
configs/training/Qwen32B/: qwen32B.toml
scripts/: all_reduce_test.py  simulate_multi_node.sh  simulate_multi_node_diloco.sh  subset_data.py
scripts/bandwith/: down.sh
src/zeroband/: __init__.py  checkpoint.py  collectives.py  comms.py  compression.py  data.py  diloco.py  infer.py  inference.py  logger.py  loss.py  lr_scheduler.py  models.py  prime_metrics.py  rl_launcher.py  schema.py  shardcast_downloader.py  train.py  utils.py
src/zeroband/C/: collectives.py  compression.py
src/zeroband/inference/: config.py  envs.py  parquet.py  pipeline.py  rewards.py  toploc.py  utils.py
src/zeroband/inferencing/: envs.py  shardcast_downloader.py  toploc.py
src/zeroband/models/: norms.py
src/zeroband/rewards/: code_utils.py  math.py  math_utils.py  prime_code.py  registry.py
src/zeroband/training/: checkpoint.py  config.py  data.py  data_prefetch.py  envs.py  loss.py  lr_scheduler.py  mp.py  utils.py  world_info.py
src/zeroband/utils/: __init__.py  envs.py  (+13 more)
tests/: __init__.py  conftest.py  test_config.py  test_configs.py  test_data.py  test_dist.py  test_infer.py  test_inference.py  test_model.py  test_rl.py  test_train.py
tests/e2e/: test_rl.py
tests/integration/: conftest.py
tests/test_c/: conftest.py  test_collectives.py  test_compression.py
tests/test_dist/: conftest.py  test_all_reduce.py  test_collectives.py  test_comms.py  test_diloco.py  test_send_state_dict.py
tests/test_torchrun/: test_train.py
tests/units/: test_envs.py  test_logger.py  test_loss.py  test_model.py  test_models.py  test_pipeline.py  test_pq_dataset.py  test_rewards.py  test_toploc.py  test_world_info.py
(+20 files in other folders)
