[project]
name = "zeroband"
version = "0.1.0"
description = "ZeroBand is a production ready codebase for decentralized training of LLM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["torch==2.4.1","numpy", "setuptools"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
line-length = 120

[tool.uv]
dev-dependencies = ["ruff>=0.5.0", "pre-commit>=3.0.0","pytest>=7.0.0"]
