[project]
name = "zeroband"
version = "0.1.0"
description = "ZeroBand is a production ready codebase for decentralized training of LLM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "numpy",
    "setuptools",
    "transformers>=4.44.2",
    "transformers @ git+https://github.com/samsja/transformers.git@flex-fix-v4.48.3",
    "datasets>=3.0.0",
    "pydantic_config @ git+https://github.com/samsja/pydantic_config.git@b7becc3",
    "torchdata>=0.8.0",
    "ninja",
    "zstandard",
    "pyarrow",
    "wandb",
    "vllm>=0.7.3",
    "jaxtyping",
    "beartype",
    "toploc",
    "llmcompressor",
    "pylatexenc>=2.10",
    "liger_kernel",
] 

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true # allow direct references to git repos in dependencies

[tool.ruff]
line-length = 140
ignore = ["F722", "F821"]

[tool.uv]
dev-dependencies = ["ruff>=0.5.0", "pre-commit>=3.0.0","pytest>=7.0.0", "faker"]
